--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   </head>
   <body>
     <header>
+      <!--  Logo Section  -->
       <div>
         <img src="./resources/images/ic-logo.svg">
         <h3>COLMAR<span class="academy">ACADEMY</span></H3>
       </div>
+      <!--  Navigation Section  -->
       <nav>
         <ul>
           <li><a href="index.html">On campus</a></li>
@@ -23,7 +25,121 @@
         </ul>
       </nav>
     </header>
-
-
+    <!--  Banner Section  -->
+    <div class="banner">
+      <div>
+        <img src="./resources/images/banner.jpg">
+        <div>
+          <h1>Learn Something new everyday</h1>
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+          <h3>Start here</h3>
+        </div>
+      </div>
+    </div>
+      <!--  Information Section  -->
+    <div class="imformation">
+      <div>
+        <img src="./resources/images/information-main.jpg">
+        <h2>It doesn't hurt to keep practicing</h2>
+        <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+      </div>
+      <div>
+        <div>
+          <img src="./resources/images/information-orientation.jpg">
+          <h3>Orientation Date</h3>
+          <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+          <a href="index.html">Read more</a>
+        </div>
+        <div>
+          <img src="./resources/images/information-campus.jpg">
+          <h3>Our Campus</h3>
+          <p>Find which campus is close by you</p>
+          <a href="index.html">Read more</a>
+        </div>
+        <div>
+          <img src="./resources/images/information-guest-lecture.jpg">
+          <h3>Our guest lecture</h3>
+          <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+          <a href="index.html">Read more</a>
+        </div>
+      </div>
+    </div>
+    <!--  Courses Section  -->
+    <div class="courses">
+      <h2>Start learning</h2>
+      <div>
+        <div>
+          <img src="./resources/images/course-software.jpg">
+          <h3>Software Engineering</h3>
+          <p class="list">COURSES</p>
+          <p>Web Development, Mobile Development, iOT, APIs</p>
+        </div>
+        <div>
+          <img src="./resources/images/course-computer-art.jpg">
+          <h3>Computer Art</h3>
+          <p class="list">COURSES</p>
+          <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+        </div>
+        <div>
+          <img src="./resources/images/course-design.jpg">
+          <h3>Design</h3>
+          <p class="list">COURSES</p>
+          <p>User Experience Design, User Research, Visual Design</p>
+        </div>
+        <div>
+          <img src="./resources/images/course-data.jpg">
+          <h3>Data</h3>
+          <p class="list">COURSES</p>
+          <p>Data Science, Big Data, SQL, Data Visualization</p>
+        </div>
+        <div>
+          <img src="./resources/images/course-business.jpg">
+          <h3>Business</h3>
+          <p class="list">COURSES</p>
+          <p>Product Development, Business Development, Startup</p>
+        </div>
+        <div>
+          <img src="./resources/images/course-marketing.jpg">
+          <h3>Marketing</h3>
+          <p class="list">COURSES</p>
+          <p>Analytics, Comtact Marketing, Mobile Marketing</p>
+        </div>
+      </div>
+    </div>
+      <!--  Thesis Exhibit Section  -->
+    <div class="thesis">
+      <div>
+        <video width="60%" height="auto" controls>
+          <source src="./resources/videos/thesis.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <h3>Reimagine Urban</h3>
+        <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+      </div>
+      <div>
+        <div>
+          <img src="./resources/images/thesis-fisma.jpg">
+          <div>
+            <h3>Fisma: Design and Prototype</h3>
+            <p>Designer showcase of new prototype product</p>
+          </div>
+        </div>
+        <div>
+          <img src="./resources/images/thesis-now-and-then.jpg">
+          <div>
+            <h3>Now and Then</h3>
+            <p>Research study about New York</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--  Footer  -->
+    <footer>
+      <p>© 2018 Colmar Academy. All rights reserved</p>
+      <div>
+        <a href="#"> Terms</a>
+        <a href="#">Privacy</a>
+      </div>
+    </footer>
   </body>
 </html>
