--- a/index.html
+++ b/index.html
@@ -7,98 +7,116 @@
   </head>
   <body>
     <header>
-      <!--  Logo Section  -->
-      <div>
-        <img src="./resources/images/ic-logo.svg">
-        <h3>COLMAR<span class="academy">ACADEMY</span></H3>
+      <div class="container">
+        <!--  Logo Section  -->
+        <div class="logo">
+          <img src="./resources/images/ic-logo.svg">
+          <h3>COLMAR<span class="academy">ACADEMY</span></H3>
+        </div>
+        <!--  Navigation Section  -->
+        <nav>
+          <ul>
+            <li><a href="index.html">On campus</a></li>
+            <li class="space"></li>
+            <li><a href="index.html">Online</a></li>
+            <li class="space"></li>
+            <li><a href="index.html">For companies</a></li>
+            <li class="space"></li>
+            <li><a href="index.html">Sign in</a></li>
+          </ul>
+        </nav>
       </div>
-      <!--  Navigation Section  -->
-      <nav>
-        <ul>
-          <li><a href="index.html">On campus</a></li>
-          <li class="space"></li>
-          <li><a href="index.html">Online</a></li>
-          <li class="space"></li>
-          <li><a href="index.html">For companies</a></li>
-          <li class="space"></li>
-          <li><a href="index.html">Sign in</a></li>
-        </ul>
-      </nav>
     </header>
     <!--  Banner Section  -->
-    <div class="banner">
-      <div>
-        <img src="./resources/images/banner.jpg">
-        <div>
+
+      <div class="banner container">
+        <div class="image-banner">
+          <img src="./resources/images/banner.jpg">
+        </div>
+        <div class="banner-content">
           <h1>Learn Something new everyday</h1>
           <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-          <h3>Start here</h3>
+          <h3 class="button">Start here</h3>
         </div>
       </div>
-    </div>
       <!--  Information Section  -->
-    <div class="imformation">
-      <div>
-        <img src="./resources/images/information-main.jpg">
+    <div class="information">
+      <div class="main-info">
+        <div clacc="image-info">
+          <img src="./resources/images/information-main.jpg">
+        </div>
         <h2>It doesn't hurt to keep practicing</h2>
         <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+        <p>Emanuel, Sr Strategist at Hiring.com</p>
       </div>
-      <div>
-        <div>
-          <img src="./resources/images/information-orientation.jpg">
-          <h3>Orientation Date</h3>
-          <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-          <a href="index.html">Read more</a>
+      <div class="about-info">
+        <div class="about orientation">
+          <div class="image-about">
+            <img src="./resources/images/information-orientation.jpg">
+          </div>
+          <div>
+            <h3>Orientation Date</h3>
+            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+            <a href="index.html">Read more</a>
+          </div>
         </div>
-        <div>
-          <img src="./resources/images/information-campus.jpg">
-          <h3>Our Campus</h3>
-          <p>Find which campus is close by you</p>
-          <a href="index.html">Read more</a>
+        <div class="about campus">
+          <div class="image-about">
+            <img src="./resources/images/information-campus.jpg">
+          </div>
+          <div>
+            <h3>Our Campus</h3>
+            <p>Find which campus is close by you</p>
+            <a href="index.html">Read more</a>
+          </div>
         </div>
-        <div>
-          <img src="./resources/images/information-guest-lecture.jpg">
-          <h3>Our guest lecture</h3>
-          <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-          <a href="index.html">Read more</a>
+        <div class="about guest">
+          <div class="image-about">
+            <img src="./resources/images/information-guest-lecture.jpg">
+          </div>
+          <div>
+            <h3>Our guest lecture</h3>
+            <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+            <a href="index.html">Read more</a>
+          </div>
         </div>
       </div>
     </div>
     <!--  Courses Section  -->
-    <div class="courses">
+    <div class="learning">
       <h2>Start learning</h2>
-      <div>
-        <div>
+      <div class="courses">
+        <div class="course">
           <img src="./resources/images/course-software.jpg">
           <h3>Software Engineering</h3>
           <p class="list">COURSES</p>
           <p>Web Development, Mobile Development, iOT, APIs</p>
         </div>
-        <div>
+        <div class="course">
           <img src="./resources/images/course-computer-art.jpg">
           <h3>Computer Art</h3>
           <p class="list">COURSES</p>
           <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
         </div>
-        <div>
+        <div class="course">
           <img src="./resources/images/course-design.jpg">
           <h3>Design</h3>
           <p class="list">COURSES</p>
           <p>User Experience Design, User Research, Visual Design</p>
         </div>
-        <div>
+        <div class="course">
           <img src="./resources/images/course-data.jpg">
           <h3>Data</h3>
           <p class="list">COURSES</p>
           <p>Data Science, Big Data, SQL, Data Visualization</p>
         </div>
-        <div>
+        <div class="course">
           <img src="./resources/images/course-business.jpg">
           <h3>Business</h3>
           <p class="list">COURSES</p>
           <p>Product Development, Business Development, Startup</p>
         </div>
-        <div>
+        <div class="course">
           <img src="./resources/images/course-marketing.jpg">
           <h3>Marketing</h3>
           <p class="list">COURSES</p>
@@ -108,27 +126,30 @@
     </div>
       <!--  Thesis Exhibit Section  -->
     <div class="thesis">
-      <div>
-        <video width="60%" height="auto" controls>
-          <source src="./resources/videos/thesis.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-        <h3>Reimagine Urban</h3>
-        <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-      </div>
-      <div>
-        <div>
-          <img src="./resources/images/thesis-fisma.jpg">
-          <div>
-            <h3>Fisma: Design and Prototype</h3>
-            <p>Designer showcase of new prototype product</p>
-          </div>
+      <h2>Thesis exhibit</h2>
+      <div class="thesis-info">
+        <div class="video">
+          <video width="100%" height="auto" controls>
+            <source src="./resources/videos/thesis.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+          <h3>Reimagine Urban</h3>
+          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
         </div>
-        <div>
-          <img src="./resources/images/thesis-now-and-then.jpg">
-          <div>
-            <h3>Now and Then</h3>
-            <p>Research study about New York</p>
+        <div class="study">
+          <div class="news design">
+            <img src="./resources/images/thesis-fisma.jpg">
+            <div>
+              <h3>Fisma: Design and Prototype</h3>
+              <p>Designer showcase of new prototype product</p>
+            </div>
+          </div>
+          <div class="news research">
+            <img src="./resources/images/thesis-now-and-then.jpg">
+            <div>
+              <h3>Now and Then</h3>
+              <p>Research study about New York</p>
+            </div>
           </div>
         </div>
       </div>
