--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <!--  Banner Section  -->
 
-      <div class="banner container">
+      <div class="banner">
         <div class="image-banner">
           <img src="./resources/images/banner.jpg">
         </div>
@@ -42,39 +42,37 @@
       <!--  Information Section  -->
     <div class="information">
       <div class="main-info">
-        <div clacc="image-info">
-          <img src="./resources/images/information-main.jpg">
-        </div>
+        <img src="./resources/images/information-main.jpg">
         <h2>It doesn't hurt to keep practicing</h2>
         <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-        <p>Emanuel, Sr Strategist at Hiring.com</p>
+        <p class="emanuel">Emanuel, Sr Strategist at Hiring.com</p>
       </div>
       <div class="about-info">
         <div class="about orientation">
-          <div class="image-about">
+          <div class="about-img">
             <img src="./resources/images/information-orientation.jpg">
           </div>
-          <div>
+          <div class="about-content">
             <h3>Orientation Date</h3>
             <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
             <a href="index.html">Read more</a>
           </div>
         </div>
         <div class="about campus">
-          <div class="image-about">
+          <div class="about-img">
             <img src="./resources/images/information-campus.jpg">
           </div>
-          <div>
+          <div class="about-content">
             <h3>Our Campus</h3>
             <p>Find which campus is close by you</p>
             <a href="index.html">Read more</a>
           </div>
         </div>
         <div class="about guest">
-          <div class="image-about">
+          <div class="about-img">
             <img src="./resources/images/information-guest-lecture.jpg">
           </div>
-          <div>
+          <div class="about-content">
             <h3>Our guest lecture</h3>
             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
             <a href="index.html">Read more</a>
@@ -88,39 +86,51 @@
       <div class="courses">
         <div class="course">
           <img src="./resources/images/course-software.jpg">
-          <h3>Software Engineering</h3>
-          <p class="list">COURSES</p>
-          <p>Web Development, Mobile Development, iOT, APIs</p>
+          <div class="learning-content">
+            <h3>Software Engineering</h3>
+            <p class="list">COURSES</p>
+            <p>Web Development, Mobile Development, iOT, APIs</p>
+          </div>
         </div>
         <div class="course">
           <img src="./resources/images/course-computer-art.jpg">
-          <h3>Computer Art</h3>
-          <p class="list">COURSES</p>
-          <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+          <div class="learning-content">
+            <h3>Computer Art</h3>
+            <p class="list">COURSES</p>
+            <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+          </div>
         </div>
         <div class="course">
           <img src="./resources/images/course-design.jpg">
-          <h3>Design</h3>
-          <p class="list">COURSES</p>
-          <p>User Experience Design, User Research, Visual Design</p>
+          <div class="learning-content">
+            <h3>Design</h3>
+            <p class="list">COURSES</p>
+            <p>User Experience Design, User Research, Visual Design</p>
+          </div>
         </div>
         <div class="course">
           <img src="./resources/images/course-data.jpg">
-          <h3>Data</h3>
-          <p class="list">COURSES</p>
-          <p>Data Science, Big Data, SQL, Data Visualization</p>
+          <div class="learning-content">
+            <h3>Data</h3>
+            <p class="list">COURSES</p>
+            <p>Data Science, Big Data, SQL, Data Visualization</p>
+          </div>
         </div>
         <div class="course">
           <img src="./resources/images/course-business.jpg">
-          <h3>Business</h3>
-          <p class="list">COURSES</p>
-          <p>Product Development, Business Development, Startup</p>
+          <div class="learning-content">
+            <h3>Business</h3>
+            <p class="list">COURSES</p>
+            <p>Product Development, Business Development, Startup</p>
+          </div>
         </div>
         <div class="course">
           <img src="./resources/images/course-marketing.jpg">
-          <h3>Marketing</h3>
-          <p class="list">COURSES</p>
-          <p>Analytics, Comtact Marketing, Mobile Marketing</p>
+          <div class="learning-content">
+            <h3>Marketing</h3>
+            <p class="list">COURSES</p>
+            <p>Analytics, Comtact Marketing, Mobile Marketing</p>
+          </div>
         </div>
       </div>
     </div>
