finished code for mobile display

--- a/index.html
+++ b/index.html
@@ -10,19 +10,22 @@
       <div class="container">
         <!--  Logo Section  -->
         <div class="logo">
-          <img src="./resources/images/ic-logo.svg">
+          <img src="./resources/images/ic-logo.svg" alt="logo">
+          <img src="./resources/images/ic-on-campus.svg" alt="on campus" class="mobile">
+          <img src="./resources/images/ic-online.svg" alt="online" class="mobile">
+          <img src="./resources/images/ic-login.svg" alt="login" class="mobile">
           <h3>COLMAR<span class="academy">ACADEMY</span></H3>
         </div>
         <!--  Navigation Section  -->
         <nav>
           <ul>
-            <li><a href="index.html">On campus</a></li>
+            <li><a href="#">On campus</a></li>
             <li class="space"></li>
-            <li><a href="index.html">Online</a></li>
+            <li><a href="#">Online</a></li>
             <li class="space"></li>
-            <li><a href="index.html">For companies</a></li>
+            <li><a href="#">For companies</a></li>
             <li class="space"></li>
-            <li><a href="index.html">Sign in</a></li>
+            <li><a href="#">Sign in</a></li>
           </ul>
         </nav>
       </div>
@@ -31,7 +34,7 @@
 
       <div class="banner">
         <div class="image-banner">
-          <img src="./resources/images/banner.jpg">
+          <img src="./resources/images/banner.jpg" alt="banner">
         </div>
         <div class="banner-content">
           <h1>Learn Something new everyday</h1>
@@ -42,7 +45,7 @@
       <!--  Information Section  -->
     <div class="information">
       <div class="main-info">
-        <img src="./resources/images/information-main.jpg">
+        <img src="./resources/images/information-main.jpg" alt="information" title="information">
         <h2>It doesn't hurt to keep practicing</h2>
         <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
         <p class="emanuel">Emanuel, Sr Strategist at Hiring.com</p>
@@ -50,7 +53,8 @@
       <div class="about-info">
         <div class="about orientation">
           <div class="about-img">
-            <img src="./resources/images/information-orientation.jpg">
+            <img src="./resources/images/information-orientation.jpg" alt="Orientation Photo" title="Orientation Photo" class="bigger">
+            <img src="./resources/images/information-orientation-mobile.jpg" alt="Orientation Photo" title="Orientation Photo" class="mobile">
           </div>
           <div class="about-content">
             <h3>Orientation Date</h3>
@@ -60,7 +64,8 @@
         </div>
         <div class="about campus">
           <div class="about-img">
-            <img src="./resources/images/information-campus.jpg">
+            <img src="./resources/images/information-campus.jpg" alt="Campus Photo" title="Campus Photo" class="bigger">
+            <img src="./resources/images/information-campus-mobile.jpg" alt="Campus Photo" title="Campus Photo" class="mobile">
           </div>
           <div class="about-content">
             <h3>Our Campus</h3>
@@ -70,7 +75,8 @@
         </div>
         <div class="about guest">
           <div class="about-img">
-            <img src="./resources/images/information-guest-lecture.jpg">
+            <img src="./resources/images/information-guest-lecture.jpg" alt="Guest Lecture Photo" title="Guest Lecture Photo" class="bigger">
+            <img src="./resources/images/information-guest-lecture-mobile.jpg" alt="Guest Lecture Photo" title="Guest Lecture Photo" class="mobile">
           </div>
           <div class="about-content">
             <h3>Our guest lecture</h3>
@@ -148,15 +154,19 @@
         </div>
         <div class="study">
           <div class="news design">
-            <img src="./resources/images/thesis-fisma.jpg">
-            <div>
+            <div class="study-img">
+              <img src="./resources/images/thesis-fisma.jpg">
+            </div>
+            <div class="study-content">
               <h3>Fisma: Design and Prototype</h3>
               <p>Designer showcase of new prototype product</p>
             </div>
           </div>
-          <div class="news research">
-            <img src="./resources/images/thesis-now-and-then.jpg">
-            <div>
+          <div class="news">
+            <div class="study-img">
+              <img src="./resources/images/thesis-now-and-then.jpg">
+            </div>
+            <div class="study-content">
               <h3>Now and Then</h3>
               <p>Research study about New York</p>
             </div>
