--- a/index.html
+++ b/index.html
@@ -4,48 +4,48 @@
     <title>Colmar Academy</title>
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <header>
-      <div class="container">
-        <!--  Logo Section  -->
-        <div class="logo">
-          <img src="./resources/images/ic-logo.svg" alt="logo">
-          <img src="./resources/images/ic-on-campus.svg" alt="on campus" class="mobile">
-          <img src="./resources/images/ic-online.svg" alt="online" class="mobile">
-          <img src="./resources/images/ic-login.svg" alt="login" class="mobile">
-          <h3>COLMAR<span class="academy">ACADEMY</span></H3>
-        </div>
-        <!--  Navigation Section  -->
-        <nav>
-          <ul>
-            <li><a href="#">On campus</a></li>
-            <li class="space"></li>
-            <li><a href="#">Online</a></li>
-            <li class="space"></li>
-            <li><a href="#">For companies</a></li>
-            <li class="space"></li>
-            <li><a href="#">Sign in</a></li>
-          </ul>
-        </nav>
+      <!--  Logo Section  -->
+      <div class="logo">
+
+        <img src="./resources/images/ic-logo.svg" alt="logo" class="big">
+
+        <h3>COLMAR<span class="academy">ACADEMY</span></H3>
+        <img src="./resources/images/ic-on-campus.svg" alt="on campus" class="mobile">
+        <img src="./resources/images/ic-online.svg" alt="online" class="mobile">
+        <img src="./resources/images/ic-login.svg" alt="login" class="mobile">
       </div>
+      <!--  Navigation Section  -->
+      <nav>
+        <ul role="presentation">
+          <li><a href="#">On campus</a></li>
+          <li class="space"></li>
+          <li><a href="#">Online</a></li>
+          <li class="space"></li>
+          <li><a href="#">For companies</a></li>
+          <li class="space"></li>
+          <li><a href="#">Sign in</a></li>
+        </ul>
+      </nav>
     </header>
     <!--  Banner Section  -->
-
-      <div class="banner">
-        <div class="image-banner">
-          <img src="./resources/images/banner.jpg" alt="banner">
-        </div>
-        <div class="banner-content">
-          <h1>Learn Something new everyday</h1>
-          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-          <h3 class="button">Start here</h3>
-        </div>
+    <div class="banner">
+      <div class="image-banner">
+        <img src="./resources/images/banner.jpg" alt="Banner" title="Banner Photo">
       </div>
+      <div class="banner-content">
+        <h1>Learn Something new everyday</h1>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+        <h3 class="button">Start here</h3>
+      </div>
+    </div>
       <!--  Information Section  -->
     <div class="information">
       <div class="main-info">
-        <img src="./resources/images/information-main.jpg" alt="information" title="information">
+        <img src="./resources/images/information-main.jpg" alt="Emanuel, Sr Strategist at Hiring.com" title="Emanuel, Sr Strategist at Hiring.com">
         <h2>It doesn't hurt to keep practicing</h2>
         <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
         <p class="emanuel">Emanuel, Sr Strategist at Hiring.com</p>
@@ -54,7 +54,7 @@
         <div class="about orientation">
           <div class="about-img">
             <img src="./resources/images/information-orientation.jpg" alt="Orientation Photo" title="Orientation Photo" class="bigger">
-            <img src="./resources/images/information-orientation-mobile.jpg" alt="Orientation Photo" title="Orientation Photo" class="mobile">
+            <img src="./resources/images/information-orientation-mobile.jpg" alt="Orientation Photo" title="Orientation Photo" class="tablet">
           </div>
           <div class="about-content">
             <h3>Orientation Date</h3>
@@ -65,7 +65,7 @@
         <div class="about campus">
           <div class="about-img">
             <img src="./resources/images/information-campus.jpg" alt="Campus Photo" title="Campus Photo" class="bigger">
-            <img src="./resources/images/information-campus-mobile.jpg" alt="Campus Photo" title="Campus Photo" class="mobile">
+            <img src="./resources/images/information-campus-mobile.jpg" alt="Campus Photo" title="Campus Photo" class="tablet">
           </div>
           <div class="about-content">
             <h3>Our Campus</h3>
@@ -75,8 +75,8 @@
         </div>
         <div class="about guest">
           <div class="about-img">
-            <img src="./resources/images/information-guest-lecture.jpg" alt="Guest Lecture Photo" title="Guest Lecture Photo" class="bigger">
-            <img src="./resources/images/information-guest-lecture-mobile.jpg" alt="Guest Lecture Photo" title="Guest Lecture Photo" class="mobile">
+            <img src="./resources/images/information-guest-lecture.jpg" alt="Keynote speeker Oliver Sack" title="Keynote speeker Oliver Sack" class="bigger">
+            <img src="./resources/images/information-guest-lecture-mobile.jpg" alt="Keynote speeker Oliver Sack" title="Keynote speeker Oliver Sack" class="tablet">
           </div>
           <div class="about-content">
             <h3>Our guest lecture</h3>
@@ -91,7 +91,7 @@
       <h2>Start learning</h2>
       <div class="courses">
         <div class="course">
-          <img src="./resources/images/course-software.jpg">
+          <img src="./resources/images/course-software.jpg" alt="Course Software" title="Course Software">
           <div class="learning-content">
             <h3>Software Engineering</h3>
             <p class="list">COURSES</p>
@@ -99,7 +99,7 @@
           </div>
         </div>
         <div class="course">
-          <img src="./resources/images/course-computer-art.jpg">
+          <img src="./resources/images/course-computer-art.jpg" alt="Course Computer" title="Course Computer">
           <div class="learning-content">
             <h3>Computer Art</h3>
             <p class="list">COURSES</p>
@@ -107,7 +107,7 @@
           </div>
         </div>
         <div class="course">
-          <img src="./resources/images/course-design.jpg">
+          <img src="./resources/images/course-design.jpg" alt="Course Design" title="Course Design">
           <div class="learning-content">
             <h3>Design</h3>
             <p class="list">COURSES</p>
@@ -115,7 +115,7 @@
           </div>
         </div>
         <div class="course">
-          <img src="./resources/images/course-data.jpg">
+          <img src="./resources/images/course-data.jpg" alt="Course Data" title="Course Data">
           <div class="learning-content">
             <h3>Data</h3>
             <p class="list">COURSES</p>
@@ -123,7 +123,7 @@
           </div>
         </div>
         <div class="course">
-          <img src="./resources/images/course-business.jpg">
+          <img src="./resources/images/course-business.jpg" alt="Course Business" title="Course Business">
           <div class="learning-content">
             <h3>Business</h3>
             <p class="list">COURSES</p>
@@ -131,7 +131,7 @@
           </div>
         </div>
         <div class="course">
-          <img src="./resources/images/course-marketing.jpg">
+          <img src="./resources/images/course-marketing.jpg" alt="Course Marketing" title="Course Marketing">
           <div class="learning-content">
             <h3>Marketing</h3>
             <p class="list">COURSES</p>
@@ -155,7 +155,7 @@
         <div class="study">
           <div class="news design">
             <div class="study-img">
-              <img src="./resources/images/thesis-fisma.jpg">
+              <img src="./resources/images/thesis-fisma.jpg" alt="Thesis Fisma" title="Thesis Fisma">
             </div>
             <div class="study-content">
               <h3>Fisma: Design and Prototype</h3>
@@ -164,7 +164,7 @@
           </div>
           <div class="news">
             <div class="study-img">
-              <img src="./resources/images/thesis-now-and-then.jpg">
+              <img src="./resources/images/thesis-now-and-then.jpg" alt="Thesis Now and Then" title="Thesis Now and Then">
             </div>
             <div class="study-content">
               <h3>Now and Then</h3>
